--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       }
       setTimeout(() => {
         onLoad();
-      }, 7000);
+      }, 5000);
     </script>
   </head>
 
-  <body style="background-color: #22272e">
+  <body style="background-color: #0d1117">
     <div class="container">
       <img src="./icon.png" alt="" width="400px" height="400px" class="icon" />
       <h1 class="text">@wuw.sh</h1>
