Update image source URL in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body style="background-color: #0d1117">
     <div class="container">
-      <img src="./icon.png" alt="" width="400px" height="400px" class="icon" />
+      <img src="https://cdn.discordapp.com/avatars/968532080361373706/0f37f9e47139cce8e8debe88398f0d52.webp?size=160" alt="" width="400px" height="400px" class="icon" />
       <h1 class="text">@wuw.sh</h1>
       <div class="loader"></div>
     </div>
